--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
 			<version>2.8.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.10</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
