--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://35.199.68.136:3306/cortaFacil
-spring.datasource.username=agoliveira
+spring.datasource.url=jdbc:mysql://mysqlsrv:3306/cortaFacil
+spring.datasource.username=root
 spring.datasource.password=bC#7ecN0
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
